Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26299

Start debugging with GDB on Linux fails

XMLWordPrintable

    • Linux/X11
    • 76760d8d80b45905e719cf4220bd8ef0798d0c41

      Attempt to start debug an C++/C application fails.

      According to debugger log: commands issued to GDB are for GDB/MI, not for Linux GDB.

      Example: -file-exec-and-symbols

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            orgads Orgad Shaneh
            igorben Igor Bender
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes